--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
         <section>
             <div class="container">
                 <article class="device">
-                    <p class="device__subtitle">Get up to 20% off Today Only!</p>
-                    <h2 class="device__title">THE 4K HDR COMPACT DRONE</h2>
-                    <a href="device__link" class="device__link">Show Now</a>
+                    <div class="device__text">
+                        <p class="device__subtitle">Get up to 20% off Today Only!</p>
+                        <h2 class="device__title">THE 4K HDR <br> COMPACT DRONE</h2>
+                        <a href="device__link" class="device__link">Show Now</a>
+                    </div>
+                    <img class="device__img" src="./img/drone.png" alt="">
                 </article>
                 <article class="device">
-                    <p class="device__subtitle">Get up to 20% off Today Only!</p>
-                    <h2 class="device__title">THE 4K HDR COMPACT DRONE</h2>
-                    <a href="device__link" class="device__link">Show Now</a>
+                    <div class="device__text">
+                        <p class="device__subtitle">Get up to 20% off Today Only!</p>
+                        <h2 class="device__title">THE 4K HDR <br> COMPACT DRONE</h2>
+                        <a href="device__link" class="device__link">Show Now</a>
+                    </div>
+                    <img class="device__img" src="./img/camera.png" alt="">
                 </article>
-                <p></p>
             </div>
         </section>
     </main>
